--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 YPproj/library/ filter=lfs diff=lfs merge=lfs -text
 YPproj/Assets/ filter=lfs diff=lfs merge=lfs -text
+stsProjSample filter=lfs diff=lfs merge=lfs -text
