--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 YPproj/library/ filter=lfs diff=lfs merge=lfs -text
 YPproj/Assets/ filter=lfs diff=lfs merge=lfs -text
 stsProjSample filter=lfs diff=lfs merge=lfs -text
+YPproj/Assets/Model/Office_0426/[양평[[:space:]]플랫폼[[:space:]]구축[[:space:]]2단계[[:space:]]사업][[:space:]]양평군청[[:space:]]3D[[:space:]]실내지도[[:space:]]구축.fbx filter=lfs diff=lfs merge=lfs -text
