--- a/.gitignore
+++ b/.gitignore
@@ -67,4 +67,5 @@ YPproj/UserSettings/
 YPproj/Logs/
 YPproj/obj/
 StsprojSample/.metadata/
-YPproj/Assets/Model/Office_0426/**/*.meta
+
+####YPproj/Assets/Model/Office_0426/**/*.meta
